CNFT1-337 patient-listener profile consumer updates